# SDFContactLab

./: .gitignore  CMakeLists.txt  README.md
cases/block_plane/: case.json
cases/sphere_ellipsoid/: case.json
cases/sphere_sphere/: case.json
docs/: architecture.md  experiments.md  math_notes.md
include/sdf_mbd/baselines/: method_catalog.h
include/sdf_mbd/contact/: contact_types.h  simple_contact_pipeline.h
include/sdf_mbd/core/: config.h  logger.h  timer.h  version.h
include/sdf_mbd/dynamics/: contact_law.h  rigid_body.h
include/sdf_mbd/eval/: metric_calculator.h  result_types.h  result_writer.h
include/sdf_mbd/geometry/: analytic_sdfs.h  sdf_base.h
include/sdf_mbd/io/: path_utils.h
include/sdf_mbd/math/: transform.h
include/sdf_mbd/solver/: solver_interfaces.h
results/: sphere_sphere_direct.json  sphere_sphere_ours.json  summary.csv  table_2_geometry.csv
scripts/: export_tables.py  plot_metrics.py  run_benchmarks.py  run_case.py
src/apps/: benchmark_runner.cpp  demo_hello.cpp
src/contact/: simple_contact_pipeline.cpp
src/core/: config.cpp  logger.cpp
src/dynamics/: rigid_body.cpp
src/eval/: metric_calculator.cpp  result_writer.cpp
src/geometry/: analytic_sdfs.cpp
tests/: test_config_and_pipeline.cpp  test_sdf.cpp
